[package]
name = "linera-base"
description = "Base definitions, including cryptography, used by the Linera protocol."
readme = "README.md"
documentation = "https://docs.rs/linera-base/latest/linera_base/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
metrics = ["prometheus"]
reqwest = ["dep:reqwest"]
revm = []
opentelemetry = ["opentelemetry-otlp"]
test = ["test-strategy", "proptest"]

[dependencies]
allocative.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-derive.workspace = true
async-trait.workspace = true
bcs.workspace = true
cfg-if.workspace = true
chrono.workspace = true
custom_debug_derive.workspace = true
derive_more = { workspace = true, features = ["display", "from_str"] }
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
is-terminal.workspace = true
k256.workspace = true
linera-witty = { workspace = true, features = ["macros"] }
prometheus = { workspace = true, optional = true }
proptest = { workspace = true, optional = true, features = ["alloc"] }
rand.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc"] }
serde-name.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sync_wrapper.workspace = true
test-strategy = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "fmt", "ansi"] }
trait-set.workspace = true
trait-variant.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd.workspace = true

[target.'cfg(target_os = "web")'.dependencies]
clap.workspace = true
getrandom = { workspace = true, features = ["js"] }
linera-kywasmtime.workspace = true
rand = { workspace = true, features = ["getrandom", "std", "std_rng"] }
tracing-web.workspace = true
wasm-bindgen-futures.workspace = true
web-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono.workspace = true
clap.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-chrome.workspace = true
tracing-opentelemetry.workspace = true
rand = { workspace = true, features = ["getrandom", "std", "std_rng"] }
tokio = { workspace = true, features = [
    "process",
    "rt-multi-thread",
    "signal",
    "macros",
] }
tokio-util.workspace = true
prometheus.workspace = true
port-selector.workspace = true
zstd.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bcs.workspace = true
linera-base = { path = ".", default-features = false, features = ["test"] }
linera-witty = { workspace = true, features = ["test"] }
tempfile.workspace = true
test-case.workspace = true

[build-dependencies]
cfg_aliases.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "async-graphql-derive",
    # `getrandom` is not used directly here but we require it in order to give it feature flags
    "getrandom",
    "serde_bytes",
    # `wasm-bindgen` is implicitly used by `tsify`
    "wasm-bindgen",
]
