[package]
name = "linera-bridge"
description = "Bridge between Linera and EVM chains."
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
codegen = ["dep:serde-generate", "dep:serde-reflection", "dep:serde_yaml"]
cli = ["dep:clap", "dep:reqwest", "dep:serde_json", "dep:serde", "dep:fs-err"]

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "rpc-types-eth",
    "json-rpc",
    "signer-local",
    "contract",
    "reqwest",
] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
bcs.workspace = true
clap = { workspace = true, optional = true }
fs-err = { workspace = true, optional = true }
linera-base.workspace = true
linera-execution.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[[bin]]
name = "linera-bridge"
required-features = ["cli"]

[build-dependencies]
serde-generate = { version = "0.33", features = ["solidity"], optional = true }
serde-reflection = { workspace = true, optional = true }
serde_yaml = { version = "0.8.26", optional = true }

[dev-dependencies]
bcs.workspace = true
fungible.workspace = true
hex.workspace = true
insta = { workspace = true, features = ["yaml"] }
linera-base = { workspace = true, features = ["test"] }
linera-chain.workspace = true
linera-execution.workspace = true
linera-sdk.workspace = true
revm = { workspace = true, default-features = false, features = [
    "std",
    "kzg-rs",
    "secp256k1",
    "portable",
] }
revm-context.workspace = true
serde-reflection.workspace = true
serde_json.workspace = true
tempfile.workspace = true
