[package]
name = "linera-chain"
description = "Persistent data and the corresponding logics used by the Linera protocol for chains of blocks, certificates, and cross-chain messaging."
readme = "README.md"
documentation = "https://docs.rs/linera-chain/latest/linera_chain/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
test = ["tokio/macros", "linera-base/test", "linera-execution/test"]
metrics = ["prometheus", "linera-views/metrics", "linera-execution/metrics"]
web = ["linera-base/web", "linera-views/web", "linera-execution/web"]
benchmark = ["linera-base/test"]

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
linera-base.workspace = true
linera-execution.workspace = true
linera-views.workspace = true
prometheus = { workspace = true, optional = true }
rand_chacha.workspace = true
rand_distr = { workspace = true, features = ["alloc", "serde1"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bcs.workspace = true
linera-chain = { path = ".", default-features = false, features = ["test"] }

[build-dependencies]
cfg_aliases.workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait"]
