[package]
name = "linera-chain"
description = "Persistent data and the corresponding logics used by the Linera protocol for chains of blocks, certificates, and cross-chain messaging."
readme = "README.md"
documentation = "https://docs.rs/linera-chain/latest/linera_chain/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
benchmark = ["linera-base/test"]
metrics = ["prometheus", "linera-views/metrics", "linera-execution/metrics"]
test = [
    "dep:anyhow",
    "dep:axum",
    "tokio/macros",
    "linera-base/test",
    "linera-execution/test",
]
web = ["linera-base/web", "linera-views/web", "linera-execution/web"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-graphql.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
custom_debug_derive.workspace = true
futures.workspace = true
linera-base.workspace = true
linera-execution.workspace = true
linera-views.workspace = true
prometheus = { workspace = true, optional = true }
rand_chacha.workspace = true
rand_distr = { workspace = true, features = ["alloc", "serde1"] }
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-signer.workspace = true
alloy-signer-local.workspace = true
anyhow.workspace = true
assert_matches.workspace = true
bcs.workspace = true
hex.workspace = true
linera-chain = { path = ".", default-features = false, features = ["test"] }
test-case.workspace = true

[build-dependencies]
cfg_aliases.workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait", "serde_bytes"]
