[package]
name = "linera-client"
description = "A library for writing Linera client applications."
readme = "README.md"
documentation = "https://docs.rs/linera-client/latest/linera_client/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
test = ["linera-views/test", "linera-execution/test"]
benchmark = [
    "linera-base/test",
    "dep:linera-sdk",
    "dep:num-format",
    "dep:reqwest",
    "dep:anyhow",
    "dep:prometheus-parse",
    "dep:rand",
]
wasmer = [
    "linera-core/wasmer",
    "linera-execution/wasmer",
    "linera-storage/wasmer",
]
wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
fs = ["fs-err", "fs4", "linera-execution/fs", "linera-persistent/fs"]
metrics = [
    "linera-base/metrics",
    "linera-chain/metrics",
    "linera-core/metrics",
    "linera-execution/metrics",
    "linera-rpc/metrics",
    "linera-views/metrics",
]
web = [
    "dep:web-sys",
    "dep:wasm-bindgen-futures",
    "linera-base/web",
    "linera-execution/web",
    "linera-chain/web",
    "linera-client/web",
    "linera-core/web",
    "linera-persistent/indexed-db",
    "linera-rpc/web",
    "linera-storage/web",
    "linera-views/web",
]
indexed-db = ["web", "indexed_db_futures", "serde-wasm-bindgen", "gloo-utils"]
web-default = ["web", "wasmer", "indexed-db"]

[dependencies]
anyhow = { workspace = true, optional = true }
bcs.workspace = true
clap.workspace = true
futures.workspace = true
hdrhistogram = { workspace = true }
linera-base.workspace = true
linera-chain.workspace = true
linera-core.workspace = true
linera-execution.workspace = true
linera-persistent = { version = "0.15.0", path = "../linera-persistent" }
linera-rpc.workspace = true
linera-sdk = { workspace = true, optional = true }
linera-storage.workspace = true
linera-version = { workspace = true }
linera-views.workspace = true
num-format = { workspace = true, optional = true }
prometheus-parse = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
thiserror-context.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
trait-variant.workspace = true

[target.wasm32-unknown-unknown.dependencies]
flarch = { workspace = true, optional = true }
gloo-utils = { workspace = true, optional = true }
indexed_db_futures = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs-err = { workspace = true, optional = true }
fs4 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
linera-rpc = { workspace = true, features = ["server", "simple-network"] }

[build-dependencies]
cfg_aliases.workspace = true

[dev-dependencies]
amm.workspace = true
anyhow.workspace = true
base64.workspace = true
counter.workspace = true
crowd-funding.workspace = true
ethereum-tracker.workspace = true
fungible.workspace = true
linera-base = { workspace = true, features = ["test"] }
linera-chain = { workspace = true, features = ["test"] }
linera-client = { path = ".", default-features = false, features = ["test"] }
linera-core = { workspace = true, features = ["test"] }
linera-ethereum.workspace = true
linera-execution = { workspace = true, features = ["test"] }
linera-rpc = { workspace = true, features = ["test"] }
linera-storage = { workspace = true, features = ["test"] }
linera-views = { workspace = true, features = ["test"] }
matching-engine.workspace = true
native-fungible.workspace = true
non-fungible.workspace = true
proptest.workspace = true
reqwest = { workspace = true, features = ["json"] }
social.workspace = true
tempfile.workspace = true
test-case.workspace = true
test-log = { workspace = true, features = ["trace"] }
test-strategy.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
