[package]
name = "linera-ethereum"
description = "Oracle functionality for Ethereum"
readme = "README.md"
documentation = "https://docs.rs/linera-ethereum/latest/linera_ethereum/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
features = ["ethereum"]

[features]
ethereum = []

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
linera-storage-service.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
